syntax = "proto3";

package dreipc.q8r.proto.sync;
option java_package = "dreipc.q8r.proto.sync";
option java_outer_classname = "SyncProtos";
import "google/protobuf/timestamp.proto";

message SyncProto {
  string id = 1;
  string projectId = 2;
  SyncTypeProto type = 3;
}


enum SyncTypeProto {
  IMAGE = 0;
  DOCUMENT = 1;
  AUDIO = 2;
  VIDEO = 3;
  HYPERTEXT = 4;
  PAGE = 5;
  NAMED_ENTITIES = 6;
  TOPICS = 7;
  XCURATOR = 8;

}
